# my-llm-writing-project

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  explore.ipynb  ingest_data.py  main.py  pyproject.toml  setup_database.py
data/: utils.py
data/drive/: download_drive_files.py
data/dropbox/: download_dropbox_files.py
